[其他] 语法也要更新呢